styles updated a little.  need to fix date icon on small screens.

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -5,13 +5,12 @@
     font-style: normal;
 }
 
-html,
-body {
-    height: 100%;
-}
-
 body {
     background: $global-color-background;
+    background: -moz-linear-gradient(top, $global-color-background 0%, $global-color-background-darker 100%);
+    background: -webkit-linear-gradient(top, $global-color-background 0%,$global-color-background-darker 100%);
+    background: linear-gradient(to bottom, $global-color-background 0%,$global-color-background-darker 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$global-color-background', endColorstr='$global-color-background-darker',GradientType=0 );
     font-family: VeraMono;
     color: $global-color-medium;
     font-size: $global-font-size-base;
